# safemodels

./: README.md  bundle.tmp  cosign.pub  pyproject.toml
.github/workflows/: pr.yml
hashes/: gpt2.yml
hashes/hustvl/: yolos-tiny.yml
safemodels/: __init__.py  check.py  cosign.py  hash.py  model.py  repo.py
safemodels/patch/: __init__.py  huggingface_hub.py  safetensors.py
safemodels/utils/: safetensors.py
tests/: conftest.py  test_hash.py  test_patching.py  test_safetensors.py  test_signing.py
